# rockyou2024

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  main.go  rockyou2024
.github/workflows/: go-CI.yml  rust-CI.yml
.tests/: README.md
.tests/mock_index/: README.md  subset_ass.csv  subset_con.csv  subset_pas.csv  subset_wor.csv  subset_zzz.csv
crates/parse-ffi/: Cargo.toml
crates/parse-ffi/src/: lib.rs
crates/reader/: Cargo.toml
crates/reader/.tests/: README.md  test_document.txt
crates/reader/src/: config.rs  lib.rs  sync.rs  utils.rs
crates/reader/tests/: read_test_document.rs
data/index/: .gitignore  README.md
data/raw/: README.md
data/words/: README.md  en_common_words.csv
lib/: parse_ffi.go  parse_ffi.h  parse_ffi_test.go
src/host/config/: cli.go  mod.go
src/host/consts/: app.go
src/host/errors/: mod.go
src/host/index/: find_matches.go  find_matches_test.go  search_cache.go  search_index.go
src/host/interfaces/: decorators.go  endpoints.go  models.go
src/parse/: character.rs  cli.rs  config.rs  index_key_path.rs  lib.rs  logger.rs  string.rs
src/parse/_templates/: automaton_template.rs  mod.rs
src/parse/automatons/: mod.rs
src/parse/models/: index_collection.rs  index_file.rs  index_of.rs  mod.rs
src/parse/search/: mod.rs  models.rs
src/parse/search/implementations/: index_collection.rs  index_file.rs  mod.rs
src/parse/search/models/: lines_scanner.rs  manipulated_reader.rs  mod.rs  search_style.rs
