[package]
name = "rockyou2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index"
path = "src/parse/bin/index.rs"

[lib]
name = "rockyou2024"
path = "src/parse/lib.rs"

[features]
default = ["progress", "search"]
progress = ["dep:kdam"]
search = ["aho-corasick", "regex"]
# This is only useful when the `IndexCollection` persists between searches,
# which is not the case for FFI.
search_lru = ["search", "lru"]
skip_index_write = []
aho-corasick = ["dep:aho-corasick"]
regex = ["dep:regex"]
lru = ["dep:lru"]
fxhash = ["dep:fxhash"]
deduplicate = ["fxhash"]

[dependencies]
aho-corasick = { version = "1.1.3", optional = true }
anyhow = "1.0.86"
bloomfilter = "1.0.14"
clap = { version = "4.5.5", features = ["derive"] }
env_logger = "0.11.5"
fxhash = { version = "0.2.1", optional = true }
hashbrown = { version = "0.14.5", features = ["rayon"] }
kdam = { version = "0.5.2", optional = true }
log = { version = "0.4.22", features = ["release_max_level_warn", "std"] }
lru = { version = "0.12.4", optional = true }
memmap = "0.7.0"
rayon = "1.10.0"
reader = {"path"="./crates/reader"}
regex = { version = "1.10.6", optional = true }
unicode-normalization = "0.1.23"
